[gd_scene load_steps=5 format=3 uid="uid://cd7s4dby0sndr"]

[ext_resource type="Script" path="res://scenes/ui/settings_menu.gd" id="1_5s6p4"]
[ext_resource type="Theme" uid="uid://b6k02yk4mj20q" path="res://themes/main_theme.tres" id="1_7lwq8"]
[ext_resource type="Theme" uid="uid://dx1bfgn8hyby6" path="res://themes/checkbox_theme.tres" id="3_55l0q"]
[ext_resource type="Theme" uid="uid://dgb1rhly1ehum" path="res://themes/tertiary_theme.tres" id="4_7gcyu"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5s6p4")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.254902, 0.239216, 0.301961, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -62.5
offset_top = 10.0
offset_right = 62.5
offset_bottom = 55.0
grow_horizontal = 2
theme = ExtResource("1_7lwq8")
text = "Settings"

[node name="ExitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 19.0
offset_right = 134.0
offset_bottom = 63.0
theme = ExtResource("1_7lwq8")
text = "Exit"

[node name="ConfirmSettingsButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -272.0
offset_top = 19.0
offset_right = -24.0
offset_bottom = 63.0
grow_horizontal = 0
theme = ExtResource("1_7lwq8")
text = "Apply Changes"

[node name="ResolutionDropdown" type="OptionButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -107.0
offset_top = 10.0
offset_right = 107.0
offset_bottom = 54.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_7lwq8")
item_count = 3
selected = 0
popup/item_0/text = "1152x648"
popup/item_0/id = 0
popup/item_1/text = "1920x1080"
popup/item_1/id = 1
popup/item_2/text = "2560x1440"
popup/item_2/id = 2

[node name="FullscreenCheckBox" type="CheckBox" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -84.5
offset_top = -50.0
offset_right = 84.5
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_55l0q")
button_pressed = true
text = "Fullscreen"
flat = true

[node name="VolumePanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -187.0
offset_top = 161.0
offset_right = 188.0
offset_bottom = 215.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_7lwq8")

[node name="VolumeSlider" type="HSlider" parent="VolumePanel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 9.0
offset_top = 4.5
offset_right = -9.0
offset_bottom = 20.5
grow_horizontal = 2
grow_vertical = 2
min_value = -40.0
max_value = 10.0
step = 0.5

[node name="VolumeInfo" type="Label" parent="VolumePanel"]
layout_mode = 0
offset_left = 203.2
offset_top = 3.0
offset_right = 321.2
offset_bottom = 48.0
theme = ExtResource("4_7gcyu")
text = "80% Volume"
horizontal_alignment = 3

[node name="VolumeDeafultInfo" type="Label" parent="VolumePanel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -13.0
offset_right = 128.0
offset_bottom = 13.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("4_7gcyu")
text = "Default = 80%"
horizontal_alignment = 3

[node name="ScrollSoundTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="button_down" from="ExitButton" to="." method="play_menu_click_click"]
[connection signal="pressed" from="ExitButton" to="." method="play_menu_click_release"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="button_down" from="ConfirmSettingsButton" to="." method="play_action_click_click"]
[connection signal="pressed" from="ConfirmSettingsButton" to="." method="play_action_click_release"]
[connection signal="pressed" from="ConfirmSettingsButton" to="." method="_on_confirm_settings_button_pressed"]
[connection signal="button_down" from="ResolutionDropdown" to="." method="play_action_click_click"]
[connection signal="item_selected" from="ResolutionDropdown" to="." method="_on_resolution_dropdown_item_selected"]
[connection signal="mouse_entered" from="ResolutionDropdown" to="." method="_on_resolution_dropdown_mouse_entered"]
[connection signal="button_down" from="FullscreenCheckBox" to="." method="play_action_click_click"]
[connection signal="pressed" from="FullscreenCheckBox" to="." method="play_action_click_release"]
[connection signal="toggled" from="FullscreenCheckBox" to="." method="_on_fullscreen_check_box_toggled"]
[connection signal="value_changed" from="VolumePanel/VolumeSlider" to="." method="_on_volume_slider_value_changed"]
